--- a/orsys/dpl/1/nn-intro.tex
+++ b/orsys/dpl/1/nn-intro.tex
@@ -81,6 +81,12 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Réseaux de neurones : un Potentiel infini}
+  \textbf{1991} : \textbf{Kurt Hornik} : Théorème d'approximation universelle
+  \imgtw[0.8]{universal-approximation}
+\end{frame}
+
+\begin{frame}
   \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
   Sigmoïde
   \imgth[0.6]{sigmoid}
@@ -121,7 +127,12 @@
 
 \begin{frame}
   \frametitle{Réseaux de neurones : Fonction d'activation $\sigma$}
-  \imgth[0.8]{relu}
+  \begin{minipage}[c]{0.39\linewidth}
+    \imgtw[0.9]{relu}
+  \end{minipage}\hfill
+  \begin{minipage}[c]{0.59\linewidth}
+    \imgtw[0.9]{relu-approx}
+  \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
