--- a/orsys/dpl/3/dpl-tp3.tex
+++ b/orsys/dpl/3/dpl-tp3.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Volataire Generator}}}
+    \blue{\underline{\href{https://drive.google.com/open?id=1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Voltaire Generator}}}
   \end{center}
 \end{frame}
 
