--- a/orsys/dpl/3/langues.tex
+++ b/orsys/dpl/3/langues.tex
@@ -50,7 +50,7 @@
   \frametitle{Traitement du langage : word embeddings} 
   \imgtw[0.6]{word2vec-analogy}
   \begin{center}
-    \href{https://ml5js.org/reference/api-Word2vec/}{\blue{Démo dans l'espace word2vec}} \\
+    \href{http://vectors.nlpl.eu/repository/}{\blue{Repository d'embeddings}} \\
     \href{https://projector.tensorflow.org/}{\blue{Visualisation de l'espace word2vec}}
   \end{center}
 \end{frame}
