--- a/orsys/dpl/1/nn-deep-optimize.tex
+++ b/orsys/dpl/1/nn-deep-optimize.tex
@@ -16,6 +16,7 @@
   \frametitle{Optimisation de réseaux profonds}
   Exploding Gradient $\Rightarrow$ Gradient clipping
   \imgtw[0.9]{gradient-clipping}
+  Dans le cadre des réseaux réccurents $\Rightarrow$ initialisation avec des matrices orthogonales
 \end{frame}
 
 \begin{frame}
@@ -29,7 +30,7 @@
   Optimisateur plus rapide que SGD
   \begin{itemize}
   \item Root Mean Square Propagation (RMSProp)
-  \item Adapative Gradient Algorithm (AdaGrad)
+  \item Adaptative Gradient Algorithm (AdaGrad)
   \item Adaptative Moment Estimation (Adam)    $\Leftarrow$
   \item ... AdaBound (2019) ?
  \end{itemize}
