Pass arguments to beamer
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

Former-commit-id: c2ce6a8f518c724e2bd41e752bc334908c5fa6b8 [formerly 0abb4394f398212bc3d1fde858b735109bc18be5]
Former-commit-id: 1578f2edda72202f103607a18e3c4506e3a87bb1

--- a/formation.cls
+++ b/formation.cls
@@ -4,7 +4,11 @@
 
 \PassOptionsToPackage{dvipsnames,hyperref,usenames,table}{xcolor}
 
-\LoadClass[10pt]{beamer}
+\DeclareOption*{\PassOptionsToClass{\CurrentOption}{beamer}}
+
+\ProcessOptions\relax
+
+\LoadClass{beamer}
 
 
 \RequirePackage{xcolor}
@@ -33,6 +37,7 @@
 
 \newcommand{\partiald}[2]{\frac{\partial #1}{\partial #2}}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator{\ReLU}{ReLU}
 \DeclareMathOperator{\softmax}{softmax}
 \DeclareMathOperator{\cov}{cov}
@@ -91,5 +96,3 @@
 \newcommand\gray[1]{\textcolor{gray}{#1}}
 \newcommand\purple[1]{\textcolor{purple}{#1}}
 \newcommand\smallgray[1]{\textcolor{gray}{\footnotesize\it #1}}
-
-\date{}
