Adapt to new deckz directory structure
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

Former-commit-id: 93426c03dc4b43f19a3eac95d384ab7ceac2034e [formerly da00c7d03089905719622d925436ce0c34438cad]
Former-commit-id: e2bf9d56371efb49fa11ee81e97c5f9d911de723

--- a/orsys/new-mlb/1/python-intro.tex
+++ b/orsys/new-mlb/1/python-intro.tex
@@ -82,7 +82,7 @@
 \begin{frame}
   \frametitle{Introduction à Python}
   Syntaxe à typage dynamique sans délimiteurs de blocs :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/python-blocs.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/python-blocs.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/python-blocs.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/python-blocs.txt}
 \end{frame}
 
