--- a/orsys/new-mlb/3/rnn-keras.tex
+++ b/orsys/new-mlb/3/rnn-keras.tex
@@ -2,25 +2,26 @@
 
 \begin{frame}
   \frametitle{RNN avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-rnn.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-rnn.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-rnn.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{LSTM avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-lstm.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-lstm.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-lstm.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-lstm.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{GRU avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-gru.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-gru.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-gru.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-gru.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{Deep Encoder avec Keras}
   On peut demander à un layer récurrent à de fournir une output pour chaque timestep :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-rnn-all-timestep.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-gru.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn-all-timestep.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-gru.txt}
 \end{frame}
+
