suppression des header et tailer des tex importés dans share/latex/

--- a/shared/latex/demo-text-features-engineering.tex
+++ b/shared/latex/demo-text-features-engineering.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Travaux Pratiques}
-\subtitle{Traitement de données textuelles}
+\subsection{Traitement de données textuelles}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Traitement de données textuelles}
@@ -27,8 +23,3 @@
   \end{center}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
