--- a/shared/latex/keras-intro.tex
+++ b/shared/latex/keras-intro.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Deep Learning par la Pratique}
-\subtitle{Introduction à Keras}
+\subsection{Introduction à Keras}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Introduction à Keras}
@@ -132,8 +128,3 @@
   \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-custom-layer-use.py}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
