--- a/shared/latex/nn-attention-model.tex
+++ b/shared/latex/nn-attention-model.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Machine Learning}
-\subtitle{Modèle à attention et Modèle à Mémoire}
+\subsection{Modèle à attention et Modèle à Mémoire}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Modèle à attention}
@@ -15,8 +11,3 @@
   \end{center}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
