--- a/shared/latex/nn-lstm.tex
+++ b/shared/latex/nn-lstm.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Deep Learning par la Pratique}
-\subtitle{Long-Short Term Memory}
+\subsection{Long-Short Term Memory}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Long-Short Term Memory}
@@ -25,8 +21,3 @@
   \imgtw{vanishing-gradient-lstm}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
