--- a/shared/latex/nn-rnn-keras.tex
+++ b/shared/latex/nn-rnn-keras.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Deep Learning par la Pratique}
-\subtitle{RNN avec Keras}
+\subsection{RNN avec Keras}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{RNN avec Keras}
@@ -30,8 +26,3 @@
   \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-rnn-all-timestep.txt}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
