--- a/shared/latex/nn-rnn-variants.tex
+++ b/shared/latex/nn-rnn-variants.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Deep Learning par la Pratique}
-\subtitle{D'autres variantes...}
+\subsection{D'autres variantes...}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{D'autres variantes}
@@ -33,8 +29,3 @@
   \imgtw{spaghetti}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
