--- a/shared/latex/nn-rnn.tex
+++ b/shared/latex/nn-rnn.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Deep Learning par la Pratique}
-\subtitle{Réseaux de Neurones Récurrents}
+\subsection{Réseaux de Neurones Récurrents}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Réseaux de Neurones Récurrents}
@@ -50,8 +46,3 @@
   \imgtw{vanishing-gradient-rnn}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
