--- a/shared/latex/nn-transformer-network.tex
+++ b/shared/latex/nn-transformer-network.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Machine Learning}
-\subtitle{Transformer Network}
+\subsection{Transformer Network}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Transformer Network}
@@ -206,8 +202,3 @@
   \url{http://jalammar.github.io/illustrated-transformer/}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
