--- a/shared/latex/text-intro.tex
+++ b/shared/latex/text-intro.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Big Data Analytics}
-\subtitle{Natural Language Processing (NLP)}
+\subsection{Natural Language Processing (NLP)}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Traitement du langage : données}
@@ -91,8 +87,3 @@
   \imgtw[1]{nlp-tech-resume-2019}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
