--- a/shared/latex/text-pretraitements.tex
+++ b/shared/latex/text-pretraitements.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Big Data Analytics}
-\subtitle{Prétraitements}
+\subsection{Prétraitements}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Prétraitements : Collecte}
@@ -94,8 +90,3 @@
   \imgtw[0.9]{usine-a-gaz}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
