--- a/shared/latex/text-vectors.tex
+++ b/shared/latex/text-vectors.tex
@@ -1,10 +1,6 @@
-\documentclass{formation}
-\title{Big Data Analytics}
-\subtitle{Vecteurs Textuels}
+\subsection{Vecteurs Textuels}
 
-\begin{document}
 
-\maketitle
 
 \begin{frame}
   \frametitle{Vecteurs Textuels}
@@ -81,8 +77,3 @@
   \end{center}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
