--- a/shared/latex/tf-intro.tex
+++ b/shared/latex/tf-intro.tex
@@ -1,8 +1,5 @@
-\documentclass{formation}
-\title{Machine Learning}
-\subtitle{TensorFlow}
+\subsection{TensorFlow}
 
-\begin{document}
 
 \begin{frame}
   \frametitle{TensorFlow}
@@ -110,8 +107,3 @@
   \blue{\underline{\href{https://colab.research.google.com/drive/13g9krUBFSxMPKVQwiDOIz9bNUOXlCYdi}{Le code présenté, executable dans colaboratory}}}
 \end{frame}
 
-\end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
