wow le taf de ouf de la journée, wesh lol

--- a/shared/latex/keras-intro.tex
+++ b/shared/latex/keras-intro.tex
@@ -47,84 +47,84 @@
 
 \begin{frame}
   \frametitle{Réseau de neurones en Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-mlp.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-mlp.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Options de configuration des Layers}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-configurelayer.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-configurelayer.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Optimiseur, Loss et Métrique d'évaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-compile.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-compile.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Affichage du modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-print-model.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-print-model.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-print-model.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-print-model.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-learn-1.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-1.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-learn-2.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-2.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-learn-3.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-3.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-learn-4.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-4.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Evaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-evaluate.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-keras-evaluate.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-evaluate.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-keras-evaluate.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{Evaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-predict.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-keras-predict.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-predict.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-keras-predict.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde de la configuration d'un modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-save-config.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-config.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde des poids d'un modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-save-weights.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-weights.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde d'un modèle complet}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-save-all.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-all.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Callbacks}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-callbacks.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-callbacks.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Création d'un Layer}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-custom-layer.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-custom-layer.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{Utilisation de notre nouveau Layer}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-custom-layer-use.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-custom-layer-use.py}
 \end{frame}
 
