--- a/shared/latex/tf-intro.tex
+++ b/shared/latex/tf-intro.tex
@@ -30,76 +30,76 @@
 \begin{frame}
   \frametitle{TensorFlow}
   Créer un graphe :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-create_graph.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-create_graph.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-create_graph.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-create_graph.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Exécuter un graphe :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-run_graph.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-run_graph.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-run_graph.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-run_graph.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Créer un graphe tensorflow avec des ``placeholder'':
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-create_graph_placeholder.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-create_graph_placeholder.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-create_graph_placeholder.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-create_graph_placeholder.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Executer un graphe avec des ``placeholder'':
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-run_graph_placeholder.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-run_graph_placeholder.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-run_graph_placeholder.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-run_graph_placeholder.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Matrices et opérations usuelles :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-matrices.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-matrices.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-matrices.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-matrices.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Régression Linéaire (Définition des variables)
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-regression_lineaire-0.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-regression_lineaire-0.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Régression Linéaire (Définition de la régression et de son erreur) :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-regression_lineaire-1.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-regression_lineaire-1.py}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Régression Linéaire :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-regression_lineaire_run.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-regression_lineaire_run.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-regression_lineaire_run.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-regression_lineaire_run.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Enregistrer un graphe de calcul tensorflow :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-save_models.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-save_models.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-save_models.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-save_models.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Charger un graphe de calcul tensorflow :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-load_models.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-load_models.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-load_models.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-load_models.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{TensorFlow}
   Réutiliser le graphe pour ajouter de nouveaux calculs :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-modify_models.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code-illustration/tf-modify_models.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-modify_models.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-modify_models.txt}
 \end{frame}
 
 \begin{frame}
