--- a/shared/latex/nn-rnn-keras.tex
+++ b/shared/latex/nn-rnn-keras.tex
@@ -4,25 +4,25 @@
 
 \begin{frame}
   \frametitle{RNN avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-rnn.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-rnn.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-rnn.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{LSTM avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-lstm.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-lstm.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-lstm.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-lstm.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{GRU avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-gru.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-gru.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-gru.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-gru.txt}
 \end{frame}
 
 \begin{frame}
   \frametitle{Deep Encoder avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code-illustration/tf-keras-rnn-all-timestep.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code-illustration/tf-keras-rnn-all-timestep.txt}
+  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn-all-timestep.py}
+  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-rnn-all-timestep.txt}
 \end{frame}
 
